# starvector-rs

./: .gitignore  Cargo.toml  LICENSE  README.PT_BR.md  README.RU.md  README.md  THIRD_PARTY_LICENSES.md
.github/workflows/: build-binaries.yml
scripts/: export_starvector_decoder_hf.py  pack_starvector_full_gguf.py  verify_starvector_full_gguf.py
src/: config.rs  lib.rs  types.rs
src/model/: adapter.rs  adapter_quantized.rs  bigcode.rs  bigcode_quantized.rs  generation.rs  image_preprocessor.rs  loader.rs  mod.rs  starvector.rs  vision.rs  vision_quantized.rs
tests/: adapter_contract.rs  cli_smoke.rs  oracle_cpu.rs  oracle_cuda.rs  preprocessor_contract.rs  python_oracle.py  tokenizer_contract.rs
