[package]
name = "starvector-rs"
version = "0.1.0"
edition = "2024"
license = "Apache 2.0"
description = "Rust inference crate for StarVector-1B (WIP)"

[lib]
name = "starvector_rs"
path = "src/lib.rs"

[[bin]]
name = "starvector-rs"
path = "src/bin/starvector-rs.rs"

[dependencies]
candle = { package = "candle-core", version = "0.9.2", default-features = false }
candle-nn = { version = "0.9.2", default-features = false }
candle-transformers = { version = "0.9.2", default-features = false }
clap = { version = "4.6.0", features = ["derive"] }
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
safetensors = "0.7.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokenizers = { version = "0.22.2", default-features = false, features = ["onig"] }

[features]
default = []
cuda = ["candle/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
cudnn = ["cuda", "candle/cudnn", "candle-nn/cudnn", "candle-transformers/cudnn"]
